<resources>
    <string name="app_name">My Own Library</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="register_text">REGISTER</string>
    <string name="register_activity_label">REGISTER</string>
    <string name="my_books">My books</string>
    <string name="username_hint">username</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="lend_borrow_tabItem">Lend/Borrow</string>
    <string name="wishList_tabItem">WishList</string>
    <string name="my_books_tabItem">My books</string>
    <string name="double_click_to_exit_text">Please click BACK again to exit</string>
    <string name="search_button_description">Search Icon</string>
    <string name="sort_by_name_button_description">Sort by name</string>
    <string name="isbn_search_text">ISBN SEARCH</string>
    <string name="keyword_search_text">KEYWORD SEARCH</string>
    <string name="search_with_isbn_text">SEARCH WITH ISBN</string>
    <string name="add_the_book_manually_text">ADD THE BOOK MANUALLY</string>
    <string name="search_text">SEARCH</string>
    <string name="keyword_search_hint">Title, author…</string>
    <string name="isbn_text_hint">Isbn</string>
    <string name="book_add_correct">Book add correct!</string>
    <string name="book_not_found">Book not found</string>
    <string name="authors_label">Authors:</string>
    <string name="published_date">Published year:</string>
    <string name="pages_label">Pages:</string>
    <string name="isbn_label_text">ISBN:</string>
    <string name="borrow_button_text">Borrow</string>
    <string name="lend_button_text">LEND</string>
    <string name="borrow_text">Borrow</string>
    <string name="lend_text">Lend</string>
    <string name="to_dialog_text">To:</string>
    <string name="from_dialog_text">From:</string>
    <string name="title_hint">Title</string>
    <string name="authors_hint">Authors</string>
    <string name="date_format_hint">yyyy</string>
    <string name="save_book_manually_button">SAVE</string>
    <string name="unit_label_text">Who:</string>
    <string name="date_label">Date:</string>
    <string name="sort_text">sort</string>
    <string name="help_menu_item">Help</string>
    <string name="three_dots">⋮</string>
    <string name="remove_item_text">Remove</string>
    <string name="save_item_text">Save</string>
    <string name="three_dots_text">⋮</string>
    <string name="save_book_search_result_button">Save</string>
    <string name="add_to_wishList_button">To wishlist</string>
    <string name="remove_book_text">Do you want to remove this book?\nThis option is irretrievable!</string>
    <string name="remove_button_text">Remove</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="edit_item_text">Edit</string>
    <string name="registration_attempt_failed">Registration attempt failed</string>
    <string name="error_text">Error</string>
    <string name="error_message">Unknown error occurred</string>
    <string name="borrow_success_message">Book marked as borrowed</string>
    <string name="lend_success_message">Book marked as lent</string>
    <string name="required_field_message">This field is required</string>
    <string name="lent_success_message">Book marked as lent</string>
    <string name="sort_button_text">Sort</string>
    <string name="choose_sort_option_text">Choose sort option</string>

    <string name="instruction_title">Instrukcja</string>
    <string name="instruction_subtitle" >Ekran główny posiada 5 głównych elementów:</string>
    <string-array name="instruction_contents">
        <item >1. Pasek nawigacji. Zawiera podstawowe elemenety nawigacji</item>
        <item >2. Pasek zakładek.</item>
        <item >3. Moje książki. Zawiera listę książek posiadanych przez użytkownika.</item>
        <item >4. Wypożyczone/Pożyczone. Zawiera listę książek, które użytkownik komuś pożyczył lub od kogoś wypożyczył</item>
        <item >5. Lista życzeń. Zawiera listę książek, które użytkownik chciałby posiadać</item>
        <item >6. Dodaj książki manualnie</item>
    </string-array>
    <string-array name="instructions_text">
        <item name="app_bar_instruction">
            Pasek Nawigacji:\n
            -Pozwala na wyszukiwanie książek spośród posiadanych.\n
            -Sortowanie listy książek po tytule oraz dacie\n
            -Podmenu które pozwala na wyświetlenie pomocy.
        </item>
        <item name="my_book_instruction">
            Zakładka "Moje książki" zawiera listę posiadanych ksiażek.
            Po kliknięciu na daną książkę użytkownik może wyświetlić więcej informacji na temat danej książki.
            Pozwala to także wypożyczyć/pożyczyć książkę.
            Dłuższe przytrzymanie pozwala na usunięcie książki.
            Pomarańczowy przycisk pozwala na dodanie nowej książki.
            Może to obyć się na 3 sposoby:
            \n\t-Dodanie poprzez wpisanie isbn.
            \n\t-Wyszukiwanie poprzez wpisanie autora lub tytułu.
            \n\t-Dodanie książki manualnie.
        </item>
        <item name="wish_list_instruction">
            Zakładka lista życzeń wyświetla książki, ktore użytkownik chciałby posiadać.
            Wyświetlane są najważniejsze informacje czyli tytuł oraz autor.
            Kliknięcie w przycisk "⋮" pozwala wyświetlić podmenu z opcjami:\n
            \t-Dodaj książkę do listy posiadanych\n
            \t-Usuń z listy życzeń\n
        </item>
        <item name="lend_borrow_instruction">
            Zakładka pożycz/wypożycz wyświetla listę książek, które pożyczyliśmy komuś/od kogoś. Wyświetlane są najważnejsze informacje,
            tzn. jaką książkę, komu i do kiedy. Kliknięcie zielonego przycisku pozwala oznaczyć ksiażkę jako oddaną.
        </item>
        <item name="search_book_instruction">
            Wyszukanie książki pozwala uzyskać konkretną książkę i/lub książki podobne np. tego samego autora.
            Użytkownik może dodać książkę do swojej listy poprzez kliknięcie plusa obok konkretnej pozycji.
            Kliknięcie na konkretną pozycje pozwala wyświetlić szczegółowe informacje o niej. Dodatkowo mamy przyciski
            pozwalające dodać książkę z okna szczegółów zarówno do posiadanych jak i listy życzeń.
        </item>
        <item name="add_book_manually_instruction">
            Dodaj książkę manualnie:\n
            Wyświetla ekran dodania książki manualnie. Użytkownik może wtedy sam uzupełnić podstawowe informacje odnośnie książki.\n
            Np. tytuł, autorów czy dodać zdjęcie. Przycisk zapisz dodaje książkę
        </item>
    </string-array>

    <string-array name="sort_options">
        <item>Title ascending</item>
        <item>Title descending</item>
        <item>Date ascending</item>
        <item>Date descending</item>
    </string-array>
</resources>
