<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_bar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    style="@style/AppToolbarStyle"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    android:layout_height="60dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginEnd="15dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <SearchView
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxWidth="400dp"
            android:contentDescription="@string/search_button_description"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/sort_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_sort_white_24dp"
            android:contentDescription="@string/sort_by_name_button_description" />

    </LinearLayout>

</androidx.appcompat.widget.Toolbar>