<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.dialogFragments.KeywordSearchFragment">

    <EditText
        android:id="@+id/keywordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/keyword_search_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/keywordText"

        >
        <Button
            android:id="@+id/search"
            style="?attr/buttonBarButtonStyle"
            android:text="@string/search_text"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_margin="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/addManual"
            android:text="@string/add_the_book_manually_text"
            android:layout_width="0dp"
            android:layout_weight="3"
            style="?attr/buttonBarButtonStyle"
            android:layout_margin="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>